Remove enunciate REST API documentation generator